fixed up the intro

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -66,29 +66,30 @@ library(lavaan)
 library(xtable)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
+@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification might be the strongest when it is a man doing the objectifying [@gervais2011you], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. They did not include same-gender woman-woman interacting pairs. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but their model is currently only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? The current study addressing this omission with a dyadic study of interacting pairs where both members identify as women. 
 
 ##Self-Objectification
-Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level [@loughnan2015exploring] to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], which can lead to a state of self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [@fredrickson1998swimsuit, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
+Self-objectification is a psychological process that accounts offers a cognitive mechanism for translating the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], or when wearing sexualizing clothing [@fredrickson1998swimsuit]. This momentary self-objectification is referrd to as *state* self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person may interact TSO to effect experiences of feeling like a body, or state self-objectification [SSO; @garcia2016objectification].
 
 ##Women Objectifying Women
-Past research has focused on men’s objectifying behaviors, with little attention to the role that women may also play in enacting objectification of women. @hill2008examining assessed women’s experiences of objectification from men separately from women’s experiences of objectification from women and found that women may be socialized not only to see themselves as objects but perhaps to see other women as objects as well (THEY DIDN'T DETERMINE THIS IN PERSON).
-Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. Additionally, @strelan2005women found that the more women self-objectify, the more they objectify other women.  ASK RANDI-WE KNOW OBJECTIFICATION HAS MORE ADVERSE CONSEQUENCES FOR WOMEN THAN MEN (Gervais, Vescio, & Allen, 2011; Moradi & Huang, 2008; Saguy, Quinn, Dovidio, & Pratto, 2010)...MENTION THAT...HOWEVER DOES WOMEN OBJECT WOMEN TO A GREATER EXTENT THAN MEN MATTER MORE?...STILL TRYING TO FIGURE THAT OUT? ADDITIONALLY 
+Past research has focused on men’s objectifying behaviors, with little attention to the role that women may also play in enacting objectification of women. @hill2008examining assessed women’s experiences of objectification from men separately from women’s experiences of objectification from women and found that women may be socialized not only to see themselves as objects but perhaps to see other women as objects as well, although this process was not comfirmed to occur during an actual interpersonal interaction. Some studies have actually found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know very little about interpersonal sexual objectification among women and what the immediate effects of this objectification might be. Objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this higher dose of objectification might be a detrimental combination. 
+
+@harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants (although men scored higher than women on a measure of belief that objectification of women is natural for men). Additionally, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a women produce self-objectification, an a similar manner to mixed-gender interactions? 
 
 ##Interpersonal Objectification
-SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredrickson1998swimsuit]. We don't know about women-on-women interpersonal objectification. What might be different?
+Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated [self-objectification; @Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently review the research on interpersonal objectification and organized our currentl theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? Perhaps women could be amplifying each others' state self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men oragnized in the SIMO occur. In this way, women's rituals of getting ready together might places even low TSO women in a higher SSO group. 
 
-Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Among heterosexual male and female college students, self- objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
+Interpersonal objectification can also occur within the context of romantic relationships. Among heterosexual male and female college students, self- objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Both romantic relationships and relationships in general have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
-There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women? Is the self-objectification experience in mixed-gender interactions the same as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose]. Women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], but when they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
+There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? On the one hand, the ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but on the other hand, women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men]. When they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
 ##Interpersonal Objectification and Authenticity
-There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting] (CITE LITERATURE DIDN'T COME ACROSS THIS), viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop]. When a woman is objectified by a man, and then experiences self-objectification, this intergroup encounter might trigger identitiy threat, but is the same negative consequence present when a woman is objectified by another woman? Woman-woman interpersonal objectification processes might diverge from this process. One the one hand, she may not be having the same negative consequences the cascade from situations that threated group-based identity [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in an interaction may be enough to reduce feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
+There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting; CITE A SHELTON THING OR TWO], viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop]. Further, empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature of this encounter might trigger identitiy threat. Thus, perhaps there are fewer negative consequence when a woman is objectified by another woman, that is, woman-woman interpersonal objectification processes might diverge from mix-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). A woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in any interaction (intergroup or ingroup) may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
 
 ##The Current Study
-In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification,  but between same-sex female interpersonal interactions. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. We expected to replicate the results found in @garcia2016objectification. We predicted that being objectified by one’s interaction partner would lead to self-objectification, which in turn would lead to feelings of inauthenticity, then reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. Specifically, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
+In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected, in line with @garcia2016objectification, that TSO would moderate this relationship, amplyfying the positive assocaition between being objectified and SSO for women higher in TSO. We hypothesized that SSO would, in turn, lead to feelings of inauthenticity [although there is ample support against this prediction from the identity threat within intergroup interactions literature; CITE CITE]. Further, we hypothsized that these feelings of inauthencity would then be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
 
-@puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (...well, dehumanize a sexualized woman, but also @strelan2005women would predict the TSO->SOO link and @harsey2020men too), and this is mediated by the woman's own state self-objectification (SSO). So we also tested this as a possible alternative model.
+Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would predict the TSO to other-objectification link, further theorezing that this relationships is mediated by the woman's own state self-objectification (SSO). This limited, but extant, set of literature on woman-woman objectification points to a possible alternative model from the model hypothesized in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
 
 # Methods
 
@@ -97,7 +98,7 @@ The procedure used was identical to that in @garcia2016objectification, except f
 
 >There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. Even if they are not the gender you are attracted to, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
 
-The decision was made to ask even heterosexual women to judge their women partners as potential romantic partners. We felt that this prompt would keep the study closest to a replication of the previous @garcia2016objectification version of the study. Past research has found that women, largely due to an increase self-objectifying state, are indeed able to evaluate other women's potential as romantic partners--indeed, women may be unfortunately used to thinking this way about themselves, and we suspect other women. 
+Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. The decision was made to ask even heterosexual women to judge their women partners as potential romantic partners. We felt that this prompt would keep the study closest to a replication of the previous @garcia2016objectification version of the study. Past research has found that women, largely due to an increase self-objectifying state, are indeed able to evaluate other women's potential as romantic partners--indeed, women may be unfortunately used to thinking this way about themselves, and we suspect other women. 
 
 Two participants were then brought into a larger interaction room where they sat on stools prearranged to be 36 inches apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed @garcia2016objectification. The full methodology used is found in @garcia2016objectification’s study.
 
@@ -672,7 +673,7 @@ Also, future experiments or longitudinal studies should explore the external val
 Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
 
 #Conclusion
-The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. We did not find a significant effect between actor SSO and felt authenticity in the interaction, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to interaction inauthenticity. 
+The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. We did not find a significant effect between actor SSO and felt authenticity in the interaction, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to interaction inauthenticity. Perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
 
 
