updated method section

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -96,11 +96,11 @@ Here we would like to note that @puvia2013being would alternatively predict that
 ##Procedure
 The procedure used was identical to that in @garcia2016objectification, except for the instructions that the participants were given. In brief, that methodology is that each participant arrived at the laboratory and were then led into separate cubicles to prevent any communication between the participants before the interaction. In addition, each participant was screened for prior acquaintance to confirm that they had not met prior to the study. They were asked to sign the consent form to participate, and the study was described as follows: “This is a study looking at how students form different types of relationships at college.” A prompt on the computer screen told the participants that they were assigned to the “College Relationships” condition and gave the following instructions:
 
->There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. Even if they are not the gender you are attracted to, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
+>There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. **Even if they are not the gender you are attracted to**, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
 
-Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. The decision was made to ask even heterosexual women to judge their women partners as potential romantic partners. We felt that this prompt would keep the study closest to a replication of the previous @garcia2016objectification version of the study. Past research has found that women, largely due to an increase self-objectifying state, are indeed able to evaluate other women's potential as romantic partners--indeed, women may be unfortunately used to thinking this way about themselves, and we suspect other women. 
+*All* participants were told that they were assigned to the "College Relationships" condition. Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because, in Westurn culture and beyond, women need to look attractive to obtain and maintain successful relationship, thus, the "College Relationships" condition may heighten self-objectification and the evaluation of other women in a sexualized way. The decision was made to ask even heterosexual women to judge their fellow-woman partners for their potential as romantic partners. We felt that this prompt would keep the study closest to a replication of the previous @garcia2016objectification version of the study, and amplify the potential for objectification that would normally be low in the context of a psychology laboratory. Recall that, past research has found that women are indeed able to evaluate other women's potential as romantic partners [i.e., their sexual attractiveness; CITE]---indeed, women may be unfortunately quite used to thinking about their own "datability," and we suspect this this habitial thought pattern will translate to their thoughts about other women. 
 
-Two participants were then brought into a larger interaction room where they sat on stools prearranged to be 36 inches apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed @garcia2016objectification. The full methodology used is found in @garcia2016objectification’s study.
+After recieving the "College Relationships" prompt, the two participants were then brought into a larger interaction room where they sat on stools prearranged to be approximately 1 meter apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed. More detail on this methodology can be found in @garcia2016objectification.
 
 ##Combined Samples
 
